workspace = { members = [ "net/wasabi", "web_browser_core"] }
[package]
name = "rust-web-browser"
version = "0.1.0"
edition = "2021"
default-run = "rust-web-browser"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "rust-web-browser"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
web_browser_core = { path = "./web_browser_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
